css/course.css
*{
    font-family: "JetBrains Mono", "Noto Sans TC", sans-serif, monospace;
    font-optical-sizing: auto;
}

body {
    margin: 0;
    font-family: Arial, sans-serif;
    background-color: #faebd7;
}

header {
    background-color: #f8931d;
    padding: 1rem 0;
}

.computerNav {
    background-color: #f8931d;
}

.topnav {
    overflow: hidden;
    background-color: #333;
    position: relative;
    display: none;
}
  
.topnav #myLinks {
    display: none;
}
  
.topnav a {
    color: white;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
}
  
.topnav a.icon {
    background: black;
    display: block;
    /* position: absolute;
    right: 0;
    top: 0; */
}
  
.topnav #myLinks a:hover {
    background-color: #ddd;
    color: black;
}
  
.active {
    background-color: #00f99e;
    color: white;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 0; /* 確保圖片緊貼著上方的導航欄 */
}

.content {
    display: flex;
    align-items: center;
    margin: 20px 0;
    padding: 10px 50px; /* 設置內邊距 */
    width: calc(100% - 100px); /* 扣除左右邊距 */
    box-sizing: border-box; /* 確保內邊距計算在內 */
}
.club_courses .myimg{
    display: flex;
    flex: 1;
    max-width: 45%;
    height: min-content;
    order: 2;
    margin-top: auto;
    margin-bottom: 50px;
    margin-right: 20px;
    display: block;
    justify-content: end;
    object-fit: scale-down;
}

.content .myimg {
    flex: 1;
    max-width: 50%;
    height: auto;
}

.myimg{
    width: 80px;
    height: 80px;
    margin-top:auto;
    margin-bottom: auto;
    margin-left: 10px ;
}

.content div {
    flex: 1;
    padding: 10px;
}

.club_courses{
    text-align: center;
    margin-left: 50px;
    margin-right: 50px;
    border: 15px;
    border-radius: 30px;
    background-clip: padding-box;
    width: fit-content;
    max-height: auto;
    margin-top: 100px;
    margin-bottom: 100px;
    background-color: #d4d4d4;    
    color:black;
}

.afterschool_courses{
    text-align: center;
    margin-left: 50px;
    margin-right: 50px;
    border: 15px;
    border-radius: 30px;
    background-clip: padding-box;
    max-height: auto;
    margin-top: 100px;
    margin-bottom: 100px;
    background-color: transparent;    
    color:black;
    width:50%;
}

.topic {
    font-size: 80px;
    color: black;
    text-align: left;
    font-family: "JetBrains Mono", "Noto Sans TC", sans-serif, monospace;
    display: flex;
    margin: 20px;
    padding: 10px 50px;
    background-color: #d4d4d4;
}

.noMargin {
    margin: 0 0 0 0;
}

.innerText {
    font-size: 30px;
    color: black;
    text-align: left;
    margin: 20px;
    padding: 10px 50px 50px 50px;
    box-sizing: border-box; 
    line-height: 200%;
    display: flex;
    background-color: #d4d4d4;
}

.hidden {
    opacity: 0;
    transform: translateY((50%));
}

.slide-in {
    animation: slide-in 1s ease-out;
}

.highLightOuter {
    background-color: none;
    padding: 5px; /* 增加內邊距以顯示背景顏色 */
    display: inline-block; /* 確保背景顏色只影響文字部分 */
}

.highLight {
    padding-left:20px;
    background-color: none;
    color: black;
    display: inline-block; /* 確保背景顏色只影響文字部分 */
}


@keyframes slide-in {
    from {
        transform: translateY(50%);
        opacity: 0;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

/* lesson */
.card-array {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.lesson-card {
    background: #d4d4d4;
    height: 149px;
    margin: 10px;
    width: 10%;
    min-width: 300px;
    display: inline-flex;
    flex-direction: column;
    position: relative;
    border-radius: 20px;
    overflow: hidden;
    transition: all 0.3s ease-in-out;
}

.lesson-card:hover {
    background: rgba(53, 74, 95, 1);
    /* background記得改 */
    transform: scale(1.02);
    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.25);
    transition: all 0.3s cubic-bezier(0,.59,.43,.99);
}

.lesson-card-text {
    position: absolute;
    top: 20px;
    left: 85px;
}

.lesson-card-button {
    position: absolute;
    bottom: 5px;
    right: 5px;
}

.lesson-card-text hr{
    margin:0px;
    border-radius: 50px;
    border: solid;
    margin-left: 18.5px;
}

.info-button {
    padding: 10px 20px;
    font-size: 16px;
    margin: 10px;
    cursor: pointer;
    background-color: #ECDFCC;
    color: black;
    border: none;
    border-radius: 20px;
    transition: background-color 0.3s ease;
}

.info-button:hover {
    background-color: #c586c0;
}

@media (max-width: 1008px) and (min-width: 689px) {
    .lesson-card {
        width: 45%;
    }
} 

@media (max-width: 688px) {
    .lesson-card {
        width: 95%;
    }
    .computerNav {
        display: none;
    }
    .topnav {
        display: inline;
    }
    header {
        padding: 0;
    }
    .club_courses {
        margin: 50px 20px;
    }
    .afterschool_courses {
        margin: 50px 20px;
    }
    .innerText {
        padding: 10px 30px;
    }
}

